[package]
name = "minesweeper-client"
version = "0.1.0"
authors = ["eric"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.3.1"
prost = "0.6.1"
tokio = { version = "0.2", features = ["macros"] }
array2d = "0.2.1"

[build-dependencies]
tonic-build = "0.3"